--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <main class="iframe-grid">
         <!-- Example 1: Replace YOUR_FILM_ONE_URL with the actual URL you copied -->
         <div class="iframe-container">
-            <h2>The Film Title One</h2>
+            <h2>Dirty Cop</h2>
             <div class="iframe-wrapper">
                 <iframe src="https://lavio100.github.io/7PalmsData3/?filmTitle=Dirty%20Cop" title="Dirty Cop"></iframe>
             </div>
@@ -80,7 +80,7 @@
 
         <!-- Example 2: Replace YOUR_FILM_TWO_URL with the actual URL you copied -->
         <div class="iframe-container">
-            <h2>The Film Title Two</h2>
+            <h2>She's Over It</h2>
             <div class="iframe-wrapper">
                 <iframe src="https://lavio100.github.io/7PalmsData3/?filmTitle=She's%20Over%20It" title="She's Over It"></iframe>
             </div>
@@ -88,7 +88,7 @@
 
         <!-- Example 3: Added for a third film -->
         <div class="iframe-container">
-            <h2>The Film Title Three</h2>
+            <h2>One Night</h2>
             <div class="iframe-wrapper">
                 <iframe src="https://lavio100.github.io/7PalmsData3/?filmTitle=One%20Night" title="One Night"></iframe>
             </div>
